Pass integration specs to add a band or venue.

--- a/views/venues.erb
+++ b/views/venues.erb
@@ -14,7 +14,8 @@
 
 <% end %>
 
-<h3>Add a venue!</h3>
+<br>
+<h4>Add a venue!</h4>
 
 <form action="/venues" method="post">
   <label for="name"></label>
@@ -23,7 +24,7 @@
   <label for="city"></label>
   <input type="text" name="city" placeholder="City" required>
 
-  <button name="submit" class="btn btn-primary">Add Band</button>
+  <button name="submit" class="btn btn-primary">Add Venue</button>
 </form>
 
 <br>
