--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,8 @@
 <html>
   <head>
     <title>Concerts</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/darkly/bootstrap.min.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div class="container">
